--- a/LFLAppShell/LFLAppShell/Info.plist
+++ b/LFLAppShell/LFLAppShell/Info.plist
@@ -2,8 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>允许廖呆呆使用麦克风</string>
+	<key>CFBundleDisplayName</key>
+	<string>廖呆呆</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
